--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  flutter_svg: ^0.18.0
+  fancy_bottom_navigation: ^0.3.2 
+  eva_icons_flutter: ^2.0.1
 
 dev_dependencies:
   flutter_test:
