--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   firebase_analytics: ^5.0.2 
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+5
+  google_fonts: ^1.1.0
+  font_awesome_flutter: ^8.8.1
+
+
 
 dev_dependencies:
   flutter_test:
